Correção do fluxo de conversão de imagens para webp em produtos e alteração da estrutura do payload com as imagens
